--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "grunt-contrib-coffee": "~0.6.4",
     "grunt-contrib-concat": "~0.1.3",
     "grunt-contrib-uglify": "~0.2.0",
-    "grunt-contrib-stylus": "~0.5.0"
+    "grunt-contrib-stylus": "~0.5.0",
+    "grunt-contrib-cssmin": "~0.6.0"
   }
 }
